...
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/startAssessmentButton"
            style="@style/QuickCheckButton"
            android:layout_marginTop="28dp"
            android:text="@string/start_assessment"
            />

        <Button
            android:id="@+id/savedAssessmentsButton"
            style="@style/QuickCheckButton"
            android:layout_marginTop="16dp"
            android:text="@string/saved_assessments"
            />
    </LinearLayout>

...
